[package]
name = "mindtrails"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
hyper = "0.14"
sqlx = { version = "0.6", features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
